--- a/maintenance.html
+++ b/maintenance.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
-	
-<!-- Mirrored from shreethemes.in/jobnova/layouts/maintenance.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 12 Dec 2024 09:01:48 GMT -->
+
+<!-- Mirrored from shreethemes.in/Job Portal/layouts/maintenance.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 12 Dec 2024 09:01:48 GMT -->
 <head>
 		<meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <title>Jobnova - Job Board & Job Portal Bootstrap 5 Template</title>
+	    <title>Job Portal - Job Board & Job Portal for Enterprise</title>
 	    <meta name="description" content="Job Listing Bootstrap 5 Template" />
 	    <meta name="keywords" content="Onepage, creative, modern, bootstrap 5, multipurpose, clean, Job Listing, Job Board, Job, Job Portal" />
 	    <meta name="author" content="Shreethemes" />
@@ -22,7 +22,7 @@
 
     </head>
 
-    <body>        
+    <body>
         <section class="bg-home d-flex align-items-center" style="background: url('images/hero/bg2.jpg') top;">
             <div class="bg-overlay bg-gradient-overlay"></div>
             <div class="container">
@@ -45,7 +45,7 @@
                 <div class="row mt-4 pt-2">
                     <div class="col-12 text-center">
                         <div class="subscribe-form">
-                            <form class="mx-auto" action="https://shreethemes.in/jobnova/layouts/index.html">
+                            <form class="mx-auto" action="https://shreethemes.in/Job Portal/layouts/index.html">
                                 <input name="email" id="email" type="email" class="rounded-pill bg-white" required="" placeholder="Your email :">
                                 <button type="submit" class="btn btn-primary rounded-pill">Subscribe</button>
                             </form>
@@ -54,16 +54,16 @@
                 </div><!--end row-->
             </div>
         </section>
-        
+
         <!-- javascript -->
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/feather.min.js"></script>
 	    <!-- Custom -->
 	    <script src="js/plugins.init.js"></script>
 	    <script src="js/app.js"></script>
-        
+
     </body>
 
 
-<!-- Mirrored from shreethemes.in/jobnova/layouts/maintenance.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 12 Dec 2024 09:01:48 GMT -->
+<!-- Mirrored from shreethemes.in/Job Portal/layouts/maintenance.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 12 Dec 2024 09:01:48 GMT -->
 </html>
