--- a/error.html
+++ b/error.html
@@ -42,7 +42,7 @@
                                 </div>
                             </div>
                             <div class="text-center">
-                                <p class="mb-0 text-muted">© <script>document.write(new Date().getFullYear())</script> Job Portal. Design with <i class="mdi mdi-heart text-danger"></i> by <a href="https://shreethemes.in/" target="_blank" class="text-reset">Shreethemes</a>.</p>
+                                <p class="mb-0 text-muted">© <script>document.write(new Date().getFullYear())</script> Job Portal. Design with <i class="mdi mdi-heart text-danger"></i> by <a href="https://mominriyadh.me/" target="_blank" class="text-reset">Momin Riyadh</a>.</p>
                             </div>
                         </div>
                     </div><!--end col-->
