--- a/job-list-one.html
+++ b/job-list-one.html
@@ -783,13 +783,13 @@
                     <div class="row align-items-center">
                         <div class="col-sm-6">
                             <div class="text-sm-start">
-                                <p class="mb-0 fw-medium">© <script>document.write(new Date().getFullYear())</script> Job Portal. Design with <i class="mdi mdi-heart text-danger"></i> by <a href="https://shreethemes.in/" target="_blank" class="text-reset">Shreethemes</a>.</p>
+                                <p class="mb-0 fw-medium">© <script>document.write(new Date().getFullYear())</script> Job Portal. Design with <i class="mdi mdi-heart text-danger"></i> by <a href="https://mominriyadh.me/" target="_blank" class="text-reset">Momin Riyadh</a>.</p>
                             </div>
                         </div>
 
                         <div class="col-sm-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
                             <ul class="list-unstyled social-icon foot-social-icon text-sm-end mb-0">
-                                <li class="list-inline-item"><a href="https://1.envato.market/Job Portal" target="_blank" class="rounded"><i data-feather="shopping-cart" class="fea icon-sm align-middle" title="Buy Now"></i></a></li>
+
                                 <li class="list-inline-item"><a href="https://dribbble.com/shreethemes" target="_blank" class="rounded"><i data-feather="dribbble" class="fea icon-sm align-middle" title="dribbble"></i></a></li>
                                 <li class="list-inline-item"><a href="http://linkedin.com/company/shreethemes" target="_blank" class="rounded"><i data-feather="linkedin" class="fea icon-sm align-middle" title="Linkedin"></i></a></li>
                                 <li class="list-inline-item"><a href="https://www.facebook.com/shreethemes" target="_blank" class="rounded"><i data-feather="facebook" class="fea icon-sm align-middle" title="facebook"></i></a></li>
