--- a/candidates.html
+++ b/candidates.html
@@ -779,10 +779,10 @@
                             <ul class="list-unstyled social-icon foot-social-icon text-sm-end mb-0">
 
 
-                                <li class="list-inline-item"><a href="http://linkedin.com/company/shreethemes" target="_blank" class="rounded"><i data-feather="linkedin" class="fea icon-sm align-middle" title="Linkedin"></i></a></li>
-                                <li class="list-inline-item"><a href="https://www.facebook.com/shreethemes" target="_blank" class="rounded"><i data-feather="facebook" class="fea icon-sm align-middle" title="facebook"></i></a></li>
-                                <li class="list-inline-item"><a href="https://www.instagram.com/shreethemes/" target="_blank" class="rounded"><i data-feather="instagram" class="fea icon-sm align-middle" title="instagram"></i></a></li>
-                                <li class="list-inline-item"><a href="https://x.com/shreethemes" target="_blank" class="rounded"><i data-feather="twitter" class="fea icon-sm align-middle" title="twitter"></i></a></li>
+                                <li class="list-inline-item"><a href="https://linkedin.com/in/mominriyadh" target="_blank" class="rounded"><i data-feather="linkedin" class="fea icon-sm align-middle" title="Linkedin"></i></a></li>
+                                <li class="list-inline-item"><a href="https://www.facebook.com/mominriyadh/" target="_blank" class="rounded"><i data-feather="facebook" class="fea icon-sm align-middle" title="facebook"></i></a></li>
+                                <li class="list-inline-item"><a href="https://www.instagram.com/mominriyadh/" target="_blank" class="rounded"><i data-feather="instagram" class="fea icon-sm align-middle" title="instagram"></i></a></li>
+                                <li class="list-inline-item"><a href="https://x.com/mominriyadh786" target="_blank" class="rounded"><i data-feather="twitter" class="fea icon-sm align-middle" title="twitter"></i></a></li>
                             </ul><!--end icon-->
                         </div><!--end col-->
                     </div><!--end row-->
